Bug 1285802 - Always add listener when orientation locked. r=wchen

When remove fullscreenchange listener, mFullScreenListener doesn't
assign to nullptr. But the listener only been added when
mFullScreenListener is null.

MozReview-Commit-ID: 1qn72ix7z9Q